# SupportMailMaker

./: .dockerignore  .gitignore  2026_support_mail_12.html  2026_support_mail_12.md  Dockerfile  README.Docker.md  README.md  Taskfile.yml  pyproject.toml  requirements.prod.txt  requirements.txt  schema.json
support_mail_maker/: app.py  cli.py  formatter.py  support_mail.schema.json  tasks.py  utils.py
support_mail_maker/static/css/: styles.css
support_mail_maker/templates/: support_mail_base.html  support_mail_template.html  upload_template.csv
support_mail_maker/tests/: conftest.py  test_app.py  test_formatter.py  test_inputs.py  test_utils.py
