[tool.poetry]
name = "supportmailmaker"
version = "0.0.0"
description = "Intelligent Parser and Formatter for Learnsoity SupportMail"
authors = ["Terry Arthur Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.1.15"
invoke = "^2.2.0"
gradio = "^5.31.0"
loguru = "^0.7.2"
pytest = "^8.3.3"
jsonschema = {extras = ["format"], version = "^4.23.0"}
markdownify = "^0.14.1"
gradio-log = "^0.0.7"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
pytest-asyncio = "^0.23.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["support_mail_maker"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
